fix: ledger loading alignment & other ui tweaks (#851)
* fix: ledger loading alignment

* misc: fix ledger cache tooltip position

* misc: light theme switch button

* fix: set dynamic tooltip container in WalletAddress

* refactor: don't add color if amount is zero

--- a/src/renderer/styles/_theme.css
+++ b/src/renderer/styles/_theme.css
@@ -65,6 +65,7 @@
   --theme-option-button: #3d456d;
   --theme-option-button-hover: #cc5e60;
   --theme-option-button-text: #8894cf;
+  --theme-switch-button: #e0f0fd;
   --theme-option-heading-button: #3d456d;
   --theme-option-heading-button-hover: #cc5e60;
   --theme-option-heading-button-text: #8894cf;
@@ -165,6 +166,7 @@
   --theme-option-button: #383c4d;
   --theme-option-button-hover: #cc5e60;
   --theme-option-button-text: #5b627c;
+  --theme-switch-button: #383c4d;
   --theme-option-heading-button: #3d456d;
   --theme-option-heading-button-hover: #cc5e60;
   --theme-option-heading-button-text: #8894cf;
